# local_binaries

./: .gitignore  README.md  pyproject.toml
src/local_binaries/: __init__.py  main.py
src/local_binaries/darwin/platform-tools/: etc1tool  hprof-conv  make_f2fs  make_f2fs_casefold  mke2fs
src/local_binaries/darwin/platform-tools/lib64/: libc++.dylib
src/local_binaries/writers/: README.md  android.py  index.html  record_phone.py
